# abx_PIP-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini
docs/: config.md  convert.md  data-contract.md  doctor.md  troubleshooting.md
src/abx/cli/: EVENTS_METRIC_EXAMPLES_TEXT.txt  UNIT_METRIC_EXAMPLES_TEXT.txt  convert_cmd.py  doctor_cmd.py  finding_guide.txt  main.py
src/abx/tests/: test_config_events.py  test_config_unit.py  test_convert_events_bad_window.py  test_convert_events_exposure_drop.py  test_convert_events_multiexposure.py  test_convert_events_multivariant.py  test_convert_events_time_to_event.py  test_convert_events_unassigned.py  test_convert_events_value_kwarg.py  test_convert_events_value_kwarg_numeric_clean.py  test_convert_events_value_parsing.py  test_convert_events_window.py  test_convert_events_window_time_to_event.py  test_convert_unit_basic.py  test_convert_unit_dedupe.py  test_convert_unit_metric_fix.py  test_doctor_smoke.py  test_imports.py  test_metric_bad_specs.py  test_metrics_parsing.py  test_preview_out_guards.py
test_example/: convert_events_big_cfg.json  converted_5000.csv  doctor_ready_cfg.json  doctor_ready_report.md  events_5000_messy.csv
